--- a/app/templates/chairman_bio.html
+++ b/app/templates/chairman_bio.html
@@ -8,7 +8,7 @@
 <div class="container my-5">
     <div class="row justify-content-center align-items-center" >
         <div class="col-md-8">
-            <div class="card shadow-lg border-0 "style="background-color: rgba(255, 255, 255, 0.5);">
+            <div class="card shadow-lg border-0 mx-auto col-lg-6"style="background-color: rgba(255, 255, 255, 0.5);">
                 <div class="card-body ">
                     <h3 class="card-title text-center mb-3">{{ chairman.name }} Bio</h3>
                     <div class="d-flex justify-content-center mb-3 ">
