--- a/app/templates/founder_bio.html
+++ b/app/templates/founder_bio.html
@@ -6,7 +6,7 @@
 {% load static %}
 
 <div class="container my-5">
-    <div class="card border-0 shadow-lg text-center p-4" style="background-color: rgba(255, 255, 255, 0.5);">
+    <div class="card border-0 shadow-lg text-center p-4 mx-auto col-lg-6 " style="background-color: rgba(255, 255, 255, 0.5);">
         <h3 class="card-title mb-3">{{ founder.name }} Bio</h3>
         <div class="d-flex justify-content-center">
             <div class="shadow-lg  rounded overflow-hidden">
