--- a/app/templates/chairman_bio.html
+++ b/app/templates/chairman_bio.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% block title %}{{ founder.name }}{% endblock %}
+{% block title %}{{ chairman.name }}{% endblock %}
 
 {% block content %}
 {% load static %}
